--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
         <script src="js/quagga.min.js" type="text/javascript"></script>
         <script src="js/test.js" type="text/javascript"></script>
 	<script src="sounds-barrage.js"></script>
+	<div id="total">0</div>
+	<p><a onClick="payment()">お会計</a></p>
+	<p><a onClick="zero()">0円にする</a></p>
+	<p><a onClick="plus()">アイテムをくわえる</a></p>
 
+	
     </body>
 </html>
