--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <link rel="stylesheet" href="css/test.css" />
     </head>
     <body>
-        <h3>バーコード</h3>
-	<p><a onClick="sound()">このテキストを押すと挨拶します！</a></p>
+        <h1>野村書店</h1>
+	<p><a onClick="sound()">ごあいさつ！</a></p>
         <div id="photo-area" class="viewport"></div>
 	<audio id="sound-file" preload="auto">
 		<source src="./decision1.mp3" type="audio/mp3">
