--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<p><a onClick="payment()">お会計</a></p>
 	<p><a onClick="zero()">0円にする</a></p>
 	<p><a onClick="plus()">アイテムをくわえる</a></p>
-
+	<p><a onClick="bye()">ありがとう</a></p>
 	
     </body>
 </html>
